force-app/main/default/objects/NotificationAutomaticCondition__c/NotificationAutomaticCondition__c.object-meta.xml
<CustomObject>
    <label>Notification Automatic Condition</label>
    <nameField>
        <label>NotificationObjectCondition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Automatic Condition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>