force-app/main/default/objects/NotificationAutomaticCondition__c/fields/BOOLEAN__c.field-meta.xml
<CustomField>
    <fullName>BOOLEAN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOOLEAN</label>
    <type>Checkbox</type>
</CustomField>