force-app/main/default/objects/NotificationAutomaticCondition__c/fields/CheckBoxValue__c.field-meta.xml
<CustomField>
    <fullName>CheckBoxValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckBox Value</label>
    <type>Checkbox</type>
</CustomField>