force-app/main/default/objects/NotificationAutomaticCondition__c/fields/CompareField__c.field-meta.xml
<CustomField>
    <fullName>CompareField__c</fullName>
    <label>Compare Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>