force-app/main/default/objects/NotificationAutomaticCondition__c/fields/CompareWith__c.field-meta.xml
<CustomField>
    <fullName>CompareWith__c</fullName>
    <label>Compare with</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>it-self</fullName>
            </value>
            <value>
                <fullName>other field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>