force-app/main/default/objects/NotificationAutomaticCondition__c/fields/CURRENCY__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY__c</fullName>
    <label>CURRENCY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>