force-app/main/default/objects/NotificationAutomaticCondition__c/fields/CurrencyValue__c.field-meta.xml
<CustomField>
    <fullName>CurrencyValue__c</fullName>
    <label>Currency Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>