force-app/main/default/objects/NotificationAutomaticCondition__c/fields/DATE__c.field-meta.xml
<CustomField>
    <fullName>DATE__c</fullName>
    <label>DATE</label>
    <type>Date</type>
</CustomField>