force-app/main/default/objects/NotificationAutomaticCondition__c/fields/DATETIME__c.field-meta.xml
<CustomField>
    <fullName>DATETIME__c</fullName>
    <label>DATETIME</label>
    <type>DateTime</type>
</CustomField>