force-app/main/default/objects/NotificationAutomaticCondition__c/fields/DateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>DateTimeValue__c</fullName>
    <description>DateTime Condition Value</description>
    <label>DateTime Value</label>
    <type>DateTime</type>
</CustomField>