force-app/main/default/objects/NotificationAutomaticCondition__c/fields/DateValue__c.field-meta.xml
<CustomField>
    <fullName>DateValue__c</fullName>
    <description>Date Condition Value</description>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>