force-app/main/default/objects/NotificationAutomaticCondition__c/fields/DOUBLE__c.field-meta.xml
<CustomField>
    <fullName>DOUBLE__c</fullName>
    <label>DOUBLE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>