force-app/main/default/objects/NotificationAutomaticCondition__c/fields/EmailValue__c.field-meta.xml
<CustomField>
    <fullName>EmailValue__c</fullName>
    <description>Email Condition Value</description>
    <label>Email Value</label>
    <type>Email</type>
</CustomField>