force-app/main/default/objects/NotificationAutomaticCondition__c/fields/FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieldType__c</fullName>
    <label>Field Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>