force-app/main/default/objects/NotificationAutomaticCondition__c/fields/fm_ObjectType__c.field-meta.xml
<CustomField>
    <fullName>fm_ObjectType__c</fullName>
    <formula>NotificationAutomaticSetting__r.ObjectType__c</formula>
    <label>Object Type</label>
    <type>Text</type>
</CustomField>