force-app/main/default/objects/NotificationAutomaticCondition__c/fields/INTEGER__c.field-meta.xml
<CustomField>
    <fullName>INTEGER__c</fullName>
    <label>INTEGER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>