force-app/main/default/objects/NotificationAutomaticCondition__c/fields/LONG__c.field-meta.xml
<CustomField>
    <fullName>LONG__c</fullName>
    <label>LONG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>