force-app/main/default/objects/NotificationAutomaticCondition__c/fields/NotificationAutomaticSetting__c.field-meta.xml
<CustomField>
    <fullName>NotificationAutomaticSetting__c</fullName>
    <label>Notification Automatic Setting</label>
    <referenceTo>NotificationAutomaticSetting__c</referenceTo>
    <relationshipLabel>Notification Automatic Condition</relationshipLabel>
    <relationshipName>NotificationAutomaticConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>