force-app/main/default/objects/NotificationAutomaticCondition__c/fields/NumberValue__c.field-meta.xml
<CustomField>
    <fullName>NumberValue__c</fullName>
    <description>Numner Condition Value</description>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>