force-app/main/default/objects/NotificationAutomaticCondition__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any change</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not equal to</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does not contain</fullName>
            </value>
            <value>
                <fullName>Greater than</fullName>
            </value>
            <value>
                <fullName>Greater than or Equal</fullName>
            </value>
            <value>
                <fullName>Less than</fullName>
            </value>
            <value>
                <fullName>Less than or Equal</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>Not empty</fullName>
            </value>
            <value>
                <fullName>Start with</fullName>
            </value>
            <value>
                <fullName>End with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>