force-app/main/default/objects/NotificationAutomaticCondition__c/fields/PERCENT__c.field-meta.xml
<CustomField>
    <fullName>PERCENT__c</fullName>
    <label>PERCENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>