force-app/main/default/objects/NotificationAutomaticCondition__c/fields/PercentValue__c.field-meta.xml
<CustomField>
    <fullName>PercentValue__c</fullName>
    <description>Percent Condition Value</description>
    <label>Percent Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>