force-app/main/default/objects/NotificationAutomaticCondition__c/fields/PhoneValue__c.field-meta.xml
<CustomField>
    <fullName>PhoneValue__c</fullName>
    <description>Phone Condition Value</description>
    <label>Phone Value</label>
    <type>Phone</type>
</CustomField>