force-app/main/default/objects/NotificationAutomaticCondition__c/fields/PICKLIST__c.field-meta.xml
<CustomField>
    <fullName>PICKLIST__c</fullName>
    <label>PICKLIST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>