force-app/main/default/objects/NotificationAutomaticCondition__c/fields/REFERENCE__c.field-meta.xml
<CustomField>
    <fullName>REFERENCE__c</fullName>
    <label>REFERENCE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>