force-app/main/default/objects/NotificationAutomaticCondition__c/fields/ReferenceType__c.field-meta.xml
<CustomField>
    <fullName>ReferenceType__c</fullName>
    <label>Reference Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>