force-app/main/default/objects/NotificationAutomaticCondition__c/fields/ReferenceValue__c.field-meta.xml
<CustomField>
    <fullName>ReferenceValue__c</fullName>
    <description>Reference Condition Value</description>
    <label>Reference Value</label>
    <length>18</length>
    <type>Text</type>
</CustomField>