force-app/main/default/objects/NotificationAutomaticCondition__c/fields/STRING__c.field-meta.xml
<CustomField>
    <fullName>STRING__c</fullName>
    <label>STRING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>