force-app/main/default/objects/NotificationAutomaticCondition__c/fields/TextValue__c.field-meta.xml
<CustomField>
    <fullName>TextValue__c</fullName>
    <description>String, Picklist Condition Value ( Text Area, Rich Text, Multi-Picklist X)</description>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>