force-app/main/default/objects/NotificationAutomaticCondition__c/fields/TIME__c.field-meta.xml
<CustomField>
    <fullName>TIME__c</fullName>
    <label>TIME</label>
    <type>Time</type>
</CustomField>